--- a/assets/sass/layouts/_articles.scss
+++ b/assets/sass/layouts/_articles.scss
@@ -1,5 +1,5 @@
 .article-hero-area {
-  padding: 220px 0 60px;
+  padding: 180px 0 60px;
   background-color: #F1F9F5;
   @include mobile {
     padding: 160px 0 60px;
